UtahLiveDataTest/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>GOVGRANTS Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AdminFlag__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdminFlag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affects_Versions__c</fullName>
        <label>Affects Versions*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v2.0.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.01.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.02.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.03.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.04.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.05.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.06.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.07.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.08.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.09.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.10.0.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_in_hours__c</fullName>
        <formula>IF( ISBLANK( ClosedDate ) , ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration of time in hours between ticket creation and resolution time. This is calculated as per business hours excluding weekends</inlineHelpText>
        <label>Age(in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_ready_for_staging_on_time__c</fullName>
        <label>App ready for staging on time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>App_ready_to_scan_on_time__c</fullName>
        <label>App ready to scan on time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Version__c</fullName>
        <description>Version of GovGrants where issue is seen</description>
        <inlineHelpText>Version of GovGrants where issue is seen</inlineHelpText>
        <label>Application Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Brian Le</fullName>
                </value>
                <value>
                    <fullName>Christopher Kelley-Hoffman</fullName>
                </value>
                <value>
                    <fullName>Chhaya Shah</fullName>
                </value>
                <value>
                    <fullName>Giha Villazon</fullName>
                </value>
                <value>
                    <fullName>Jen Rumbaugh</fullName>
                </value>
                <value>
                    <fullName>Kavitha Kommineri</fullName>
                </value>
                <value>
                    <fullName>Lawrence Njuguna</fullName>
                </value>
                <value>
                    <fullName>Lynh Tang</fullName>
                </value>
                <value>
                    <fullName>Rashika Shrestha</fullName>
                </value>
                <value>
                    <fullName>Rob Powell</fullName>
                </value>
                <value>
                    <fullName>Ryan Shapiro</fullName>
                </value>
                <value>
                    <fullName>Edward Robinson</fullName>
                </value>
                <value>
                    <fullName>Seema Sundrani</fullName>
                </value>
                <value>
                    <fullName>Sai Lwin</fullName>
                </value>
                <value>
                    <fullName>Chad Hammond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Comments__c</fullName>
        <label>Assignment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BAA__c</fullName>
        <label>BAA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_system__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LRBAA</fullName>
                </value>
                <value>
                    <fullName>TBAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_Number__c</fullName>
        <inlineHelpText>A.B.C.D Build Number Is D.</inlineHelpText>
        <label>Build Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <description>Measurement of business value of a requirement.</description>
        <inlineHelpText>Measurement of business value of a requirement.</inlineHelpText>
        <label>Business Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseAmendment__c</fullName>
        <label>Case Amendment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Case_Sub__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Extend Deadline Date</fullName>
                </value>
                <value>
                    <fullName>Extend Deadline Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseComments__c</fullName>
        <label>CaseComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseSubject__c</fullName>
        <label>CaseSubject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Comments_All__c</fullName>
        <description>This is field which will append case comments into a single field</description>
        <label>Case Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Number_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/CaseViewFinal?Id=&apos;+Id,  Case_Number__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <formula>&apos;DC- &apos; + CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Sub__c</fullName>
        <label>Case Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Activate User</fullName>
                </value>
                <value>
                    <fullName>Access/Privilege</fullName>
                </value>
                <value>
                    <fullName>Deactivate User</fullName>
                </value>
                <value>
                    <fullName>Lost Password</fullName>
                </value>
                <value>
                    <fullName>Lost Username</fullName>
                </value>
                <value>
                    <fullName>Create New Program User Account</fullName>
                </value>
                <value>
                    <fullName>Question/Inquiry About Solicitation</fullName>
                </value>
                <value>
                    <fullName>Submission Status</fullName>
                </value>
                <value>
                    <fullName>Add Amendment</fullName>
                </value>
                <value>
                    <fullName>Question/Inquiry About Evaluation</fullName>
                </value>
                <value>
                    <fullName>Send Back WP/Proposal</fullName>
                </value>
                <value>
                    <fullName>Program Portal Navigation</fullName>
                </value>
                <value>
                    <fullName>Public Portal Navigation</fullName>
                </value>
                <value>
                    <fullName>Request to Remove Solicitation</fullName>
                </value>
                <value>
                    <fullName>General Guidance on New Registration</fullName>
                </value>
                <value>
                    <fullName>Update Existing Company Registration</fullName>
                </value>
                <value>
                    <fullName>Download SBC Control ID Certificate</fullName>
                </value>
                <value>
                    <fullName>Unlock Account</fullName>
                </value>
                <value>
                    <fullName>View Transition Rate</fullName>
                </value>
                <value>
                    <fullName>Federal Agency New Account Registration</fullName>
                </value>
                <value>
                    <fullName>General Program-related Inquiries</fullName>
                </value>
                <value>
                    <fullName>Referred to Federal Agency Contacts</fullName>
                </value>
                <value>
                    <fullName>Bug Report/Feedback</fullName>
                </value>
                <value>
                    <fullName>Web Maintenance/Content Update</fullName>
                </value>
                <value>
                    <fullName>Browser Certificate Authentication</fullName>
                </value>
                <value>
                    <fullName>FOIA Request</fullName>
                </value>
                <value>
                    <fullName>Consolidate User Accounts/Awards</fullName>
                </value>
                <value>
                    <fullName>Commercialization Report</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>XML Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categorization__c</fullName>
        <label>Categorization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User didn&apos;t attend training</fullName>
                </value>
                <value>
                    <fullName>Complex functionality</fullName>
                </value>
                <value>
                    <fullName>Existing problem</fullName>
                </value>
                <value>
                    <fullName>Instructions not clear</fullName>
                </value>
                <value>
                    <fullName>New problem</fullName>
                </value>
                <value>
                    <fullName>User Account DHS</fullName>
                </value>
                <value>
                    <fullName>Questions Directed to Program Office DHS	 10/31/2014 10:46 AM</fullName>
                </value>
                <value>
                    <fullName>Solicitation Related</fullName>
                </value>
                <value>
                    <fullName>Evaluation/Review Related</fullName>
                </value>
                <value>
                    <fullName>Proposal Related</fullName>
                </value>
                <value>
                    <fullName>Other DHS</fullName>
                </value>
                <value>
                    <fullName>Technical Issues</fullName>
                </value>
                <value>
                    <fullName>Database Inquiry/Reports</fullName>
                </value>
                <value>
                    <fullName>User Account SBIR</fullName>
                </value>
                <value>
                    <fullName>Other SBIR</fullName>
                </value>
                <value>
                    <fullName>Questions Directed to Prgm Office SBIR</fullName>
                </value>
                <value>
                    <fullName>User Account</fullName>
                </value>
                <value>
                    <fullName>Company Info.</fullName>
                </value>
                <value>
                    <fullName>Questions Related to Program Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Contract/Award Related</fullName>
                </value>
                <value>
                    <fullName>User Input Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process Description</fullName>
                </value>
                <value>
                    <fullName>Training Material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <label>Components</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAdmin</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Mock-up</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>Rev-Sel</fullName>
                </value>
                <value>
                    <fullName>Sub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email address of the client who reported the issue. This field should be used if the client does not have JIRA account.</description>
        <inlineHelpText>Email address of the client who reported the issue. This field should be used if the client does not have JIRA account.</inlineHelpText>
        <label>Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Name of client who logs the issue. This field should be used if the client does not have a JIRA account.</description>
        <inlineHelpText>Name of client who logs the issue. This field should be used if the client does not have a JIRA account.</inlineHelpText>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_Number__c</fullName>
        <description>Phone number of the client who reported the issue</description>
        <inlineHelpText>Phone number of the client who reported the issue</inlineHelpText>
        <label>Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Organization__c</fullName>
        <label>Customer Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Origin__c</fullName>
        <label>Date/Time of Origin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <description>Indicate the decision taken on this change request</description>
        <inlineHelpText>Indicate the decision taken on this change request</inlineHelpText>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved by Lead</fullName>
                </value>
                <value>
                    <fullName>Approved by CCB</fullName>
                </value>
                <value>
                    <fullName>Approved by  RSC</fullName>
                </value>
                <value>
                    <fullName>Approved by Executive Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department of the user who has raised the ticket</description>
        <inlineHelpText>Department of client who reported the issue</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Program Mgmt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Comments__c</fullName>
        <description>Comments for resolution of issue. These are visible to the Issue creator</description>
        <inlineHelpText>Comments for resolution of issue. These are visible to the Issue creator</inlineHelpText>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detected_Version__c</fullName>
        <description>The version in which the issue was found.</description>
        <label>Detected Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>v2.0.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.01.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.02.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.03.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.04.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.05.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.06.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.07.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.08.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.09.0.0</fullName>
                </value>
                <value>
                    <fullName>v2.10.0.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dev_Start_Date__c</fullName>
        <label>Dev Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_DUNS__c</fullName>
        <label>EIN/DUNS:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <label>Outgoing Email Signature</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Thread__c</fullName>
        <description>The most recent email thread attached to a case.</description>
        <label>Email Thread</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>SuppliedEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <description>Estimated Time (in hours)</description>
        <inlineHelpText>Estimated Time (in hours)</inlineHelpText>
        <label>ETA(in Hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_List__c</fullName>
        <label>Feedback List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Item / Maintenance Request</fullName>
                </value>
                <value>
                    <fullName>Customer Issue</fullName>
                </value>
                <value>
                    <fullName>Development Task</fullName>
                </value>
                <value>
                    <fullName>Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Report Application Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows to flag issues with impediments.</inlineHelpText>
        <label>Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Analysis__c</fullName>
        <description>Enter rationale and impact analysis for the provided level of effort</description>
        <inlineHelpText>Enter rationale and impact analysis for the provided level of effort</inlineHelpText>
        <label>Impact Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>User Impact of the issue</inlineHelpText>
        <label>User Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inserted_Version__c</fullName>
        <label>Inserted Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTier2LoggedIn__c</fullName>
        <formula>IF($User.ProfileName__c = &apos;TR2&apos; , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsTier2LoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Source__c</fullName>
        <inlineHelpText>Source of creating Case/Issue</inlineHelpText>
        <label>Issue Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type1__c</fullName>
        <description>Select Type or Category of Issue</description>
        <inlineHelpText>Select Type or Category of Issue</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Product Error</fullName>
                </value>
                <value>
                    <fullName>Change in System Behaviour</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Data Error</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Jira Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Build/Install Request</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Change Request_SCR_DOE</fullName>
                </value>
                <value>
                    <fullName>CM Administration</fullName>
                </value>
                <value>
                    <fullName>Database Documentation</fullName>
                </value>
                <value>
                    <fullName>Database Setup/ Maintenance</fullName>
                </value>
                <value>
                    <fullName>Development Documentation</fullName>
                </value>
                <value>
                    <fullName>Environment Support</fullName>
                </value>
                <value>
                    <fullName>External Enhancement</fullName>
                </value>
                <value>
                    <fullName>Incident Management</fullName>
                </value>
                <value>
                    <fullName>Install/Build Script Development</fullName>
                </value>
                <value>
                    <fullName>Internal Enhancement</fullName>
                </value>
                <value>
                    <fullName>Mockup Development</fullName>
                </value>
                <value>
                    <fullName>New Development</fullName>
                </value>
                <value>
                    <fullName>New Initiative</fullName>
                </value>
                <value>
                    <fullName>OG Deployment</fullName>
                </value>
                <value>
                    <fullName>OG Operations Administration</fullName>
                </value>
                <value>
                    <fullName>OG Server Management</fullName>
                </value>
                <value>
                    <fullName>OG Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>OG Vulnerability Scan</fullName>
                </value>
                <value>
                    <fullName>Other Project Management</fullName>
                </value>
                <value>
                    <fullName>Other Sysadmin</fullName>
                </value>
                <value>
                    <fullName>Peer Review Finding</fullName>
                </value>
                <value>
                    <fullName>Peer Review Task</fullName>
                </value>
                <value>
                    <fullName>Process Change Request</fullName>
                </value>
                <value>
                    <fullName>Production Blog</fullName>
                </value>
                <value>
                    <fullName>Production Deployment</fullName>
                </value>
                <value>
                    <fullName>QA Documentation</fullName>
                </value>
                <value>
                    <fullName>Support Request</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>